examples/datalog/21_query_features/15_inline_computation.dl
% Test: Inline computation in query
% Expected: Compute values in query body
% Category: 21_query_features
% Priority: P2 - Query features

.kg create test_inline
.kg use test_inline

+data[(1, 10), (2, 20), (3, 30)].

% Inline computation
with_computed(Id, Val, Double, Triple) :- data(Id, Val), Double = Val * 2, Triple = Val * 3.

?- with_computed(Id, Val, Double, Triple).

.kg use default
.kg drop test_inline
